Setting up routes, API data, and templates.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,6 +11,9 @@
     <%= javascript_include_tag "site" %>
   </head>
   <body>
+    <header>
+      <a href="/">LIK</a>
+    </header>
     <%= yield %>
   </body>
 </html>
