Add cytoscape graph for intervals and shapes

--- a/source/articles/the-hypotheses.html.erb
+++ b/source/articles/the-hypotheses.html.erb
@@ -1,1 +1,14 @@
-the-hypotheses.html.erb
+<script src="/javascripts/cytoscape.min.js"></script>
+
+<h1>The Hypotheses</h1>
+<div id="cy">
+  <div id="Intervals"></div>
+  <div id="Shapes"></div>
+</div>
+
+
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.2.16/cytoscape.js"></script> -->
+<script>
+  var elements_json = <%= generate_elements_json %>
+</script>
+<%= javascript_include_tag 'intervals_shapes.js' %>
