--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,24 +1,33 @@
 body {
-  background-color: #929292;
-  color: #333;
-  font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
-    "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
-    "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
-    "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
-  padding: 18vh 1rem;
-  text-align: center;
+  // background-color: #929292;
+  background-color: #fff;
+  // color: #333;
+  // font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
+  //   "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
+  //   "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
+  //   "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
+  // padding: 18vh 1rem;
+  // text-align: center;
 }
 
-a {
-  color: rgba(#000, 0.7);
+// a {
+//   color: rgba(#000, 0.7);
 
-  &:focus,
-  &:hover {
-    color: rgba(#000, 0.6);
-  }
-}
+//   &:focus,
+//   &:hover {
+//     color: rgba(#000, 0.6);
+//   }
+// }
 
 .middleman-logo {
   margin-bottom: 1rem;
   width: 10rem;
+}
+
+#cy {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  border: 1px solid black;
+  margin: auto;
 }
