--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -10,24 +10,38 @@ body {
   // text-align: center;
 }
 
-// a {
-//   color: rgba(#000, 0.7);
-
-//   &:focus,
-//   &:hover {
-//     color: rgba(#000, 0.6);
-//   }
-// }
-
-.middleman-logo {
-  margin-bottom: 1rem;
-  width: 10rem;
-}
-
-#cy {
-  position: relative;
-  width: 100%;
-  height: 500px;
-  border: 1px solid black;
+.intervals-shapes-graph {
+  width: 99vw;
+  height: 400px;
   margin: auto;
+  // border: solid black 1px;
+}
+.nodes {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 200px;
+}
+.label {
+  display:block;
+}
+.node {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  // background-color: white;
+}
+.interval .node__visual {
+  height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  /*display: inline-block;*/
+}
+.shapes svg {
+  position: relative;
+  z-index: 2;
+}
+.node svg {
+  height: 25px;
+  width: 25px;
 }
