--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -14,12 +14,11 @@ body {
   width: 99vw;
   height: 400px;
   margin: auto;
-  // border: solid black 1px;
 }
 .nodes {
   display: flex;
   justify-content: space-evenly;
-  margin-bottom: 200px;
+  margin-bottom: 14rem;
 }
 .label {
   display:block;
@@ -31,8 +30,8 @@ body {
   // background-color: white;
 }
 .interval .node__visual {
-  height: 25px;
-  width: 25px;
+  height: 2rem;
+  width: 2rem;
   background-color: #bbb;
   border-radius: 50%;
   border: 1px solid grey;
@@ -44,6 +43,11 @@ body {
   z-index: 2;
 }
 .node svg {
-  height: 25px;
-  width: 25px;
+  height: 2rem;
+  width: 2rem;
+}
+
+.tippy-tooltip.dark-theme {
+  white-space: pre-line;
+  background-color: #333;
 }
