--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -51,3 +51,8 @@ body {
   white-space: pre-line;
   background-color: #333;
 }
+
+// For funsies
+// .intervals-shapes-graph--tk .shapes {
+//   flex-direction: row-reverse;
+// }
