Figure out how to use es6.

--- a/source/articles/index.html.erb
+++ b/source/articles/index.html.erb
@@ -18,3 +18,6 @@
 </div>
 
 <h2>Reflections</h2>
+
+<%= javascript_include_tag "test.es6", {extname: false} %>
+<script src="/javascripts/test.js"></script>
