Add chart to progress page and practice session page.

--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -614,6 +614,6 @@ rooms, and I am mostly convinced that humans will do better than dogs at
 recognizing different contexts.
 
 <script>
-  var scripts = <%= data.scripts %>
+  // var edges = <% data.intervals_and_shapes %>
 </script>
 <script src="/javascripts/the-hypotheses.js"></script>
