Add foundation, make header. Not using scss variables atm.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,6 @@
 title: The Linear Isomorphic Keybaord
 ---
 
-<%= link_to("Articles", "/articles") %>
-<%= link_to("Progress", "/progress") %>
-<%= link_to("Reflections", "/articles") %>
-<%= link_to("Practice Sessions Index", "/practice-sessions") %>
+<div class="hero">
+  <h1 class="hero__text">The Linear Isomorphic Keyboard</h1>
+</div>
