--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,58 +1,68 @@
-body {
-  // background-color: #929292;
-  background-color: #fff;
-  // color: #333;
-  // font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
-  //   "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
-  //   "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
-  //   "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
-  // padding: 18vh 1rem;
-  // text-align: center;
-}
+@import "settings.scss";
+@import "foundation.css";
 
-.intervals-shapes-graph {
-  width: 99vw;
-  height: 400px;
-  margin: auto;
-}
-.nodes {
-  display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 14rem;
-}
-.label {
-  display:block;
-}
-.node {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  // background-color: white;
-}
-.interval .node__visual {
-  height: 2rem;
-  width: 2rem;
-  background-color: #bbb;
-  border-radius: 50%;
-  border: 1px solid grey;
-  z-index: 2;
-  /*display: inline-block;*/
-}
-.shapes svg {
-  position: relative;
-  z-index: 2;
-}
-.node svg {
-  height: 2rem;
-  width: 2rem;
-}
+@import "index.css.scss";
+@import "the-hypotheses.css.scss";
 
-.tippy-tooltip.dark-theme {
-  white-space: pre-line;
-  background-color: #333;
-}
-
-// For funsies
-// .intervals-shapes-graph--tk .shapes {
-//   flex-direction: row-reverse;
+// body {
+//   // background-color: #929292;
+//   background-color: #fff;
+//   // color: #333;
+//   // font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
+//   //   "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
+//   //   "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
+//   //   "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
+//   // padding: 18vh 1rem;
+//   // text-align: center;
 // }
+
+body {
+  font-family: 'Libre Baskerville', serif;
+
+  // margin-top: 4rem;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  // background-color: rgb(0, 0, 0);
+}
+
+.navbar__logo {
+  display: inline-block;
+  height: 3rem;
+  width: 6rem;
+  padding-top: .3125rem;
+  padding-bottom: .3125rem;
+  margin-right: 1rem;
+  // font-size: 1.25rem;
+  height: 3rem;
+  line-height: inherit;
+  white-space: nowrap;
+}
+
+.navbar__nav {
+  display: flex;
+  flex-direction: row;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+
+.navbar__link {
+  margin-left: 2.5rem;
+  color: #000;
+}
+
+.navbar__link:hover {
+  color: #333;
+}
+
