Make views for index page, articles index, articles show, practice session index, practice session show, and progress.

--- a/source/progress/index.html.erb
+++ b/source/progress/index.html.erb
@@ -2,11 +2,19 @@
 <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css" />
 <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
-<h1>Progress Index</h1>
+<div class="grid-container">
+  <div class="section--top">
+    <div class="grid-x grid-padding-x">
+      <div class="cell large-12"><h1>Progress</h1></div>
+    </div>
 
-<div style="width: 68%; margin: auto;">
-  <div class="ct-chart ct-perfect-fourth"></div>
-  <div class="ct-chart-2 ct-perfect-fourth"></div>
+    <div class="grid-x grid-padding-x keyboard-progress">
+      <div class="cell large-2"></div>
+      <div class="cell large-8 ct-chart ct-octave">
+      </div>
+      <div class="cell large-2"></div>
+    </div>
+  </div>
 </div>
 
 <script>
