--- a/source/articles/index.html.erb
+++ b/source/articles/index.html.erb
@@ -1,23 +1,58 @@
-<h1>Articles Index</h1>
+<div class="grid-container">
+  <div class="section section--top">
+    <div class="grid-x grid-padding-x">
+      <div class="cell large-12"><h1>Articles</h1></div>
+    </div>
+    <ul>
+      <li class="article">
+        <div><h3><a href="/articles/the-idea">The Idea</a></h3></div>
+        <div class="article-content">There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in
+every key. The first key a new pianist will learn to play is the key of
+C major. It is wonderfully simple: just play the white notes. But...</div>
+      </li>
+      <li class="article">
+        <div><h3><a href="/articles/the-hypotheses">The Hypotheses</a></h3></div>
+        <div class="article-content">I think that the linear isomorphic keyboard (LIK) will outperform the
+traditional keyboard (TK). I predict that I will improve faster on the
+LIK than on the traditional keyboard and that the LIK will not have
+significant technical limitations in comparison to the traditional
+keyboard. More specifically...</div>
+      </li>
+      <li class="article">
+        <div><h3><a href="/articles/the-experiment">The Experiment</a></h3></div>
+        <div class="article-content">I am conducting an experiment to determine whether or not the Linear
+Isomorphic Keyboard is easier to play than the traditional piano
+keyboard. In order to compare the Linear Isomorphic Keyboard (LIK) and the
+traditional keyboard (TK), I am going to practice... </div>
+      </li>
+      <li class="article">
+        <div><h3><a href="/articles/the-practice-routine">The Practice Routine</a></h3></div>
+        <div class="article-content">I had a few things in mind when developing the curriculum for the
+keyboards to practice. Most importantly, I want to address the three
+main domains of musical prowess, the technical aspect of being able to
+play (addressed by fundamentals), and the two primary ways we determine
+what to play, sight reading and playing by ear.</div>
+      </li>
+      <li class="article">
+        <div><h3><a href="/articles/other-isomorphic-keyboards">Other Isomorphic Keyboards</a></h3></div>
+        <div class="article-content">One of the cardinal sins of productivity is to do what has already been
+done. But in my quest to test an isomorphic keyboard against the
+traditional keyboard, I appear to have sinned. Isomorphic keyboards have existed since the the early nineteenth century
+when an isomorphic layout was applied to the button accordions or
+concertina.</div>
+      </li>
+    </ul>
+  </div>
 
-<h2>Articles</h2>
-<div>
-  <a href="/articles/the-idea">The Idea</a>
+  <div class="section">
+    <div class="grid-x grid-padding-x">
+      <div class="cell large-12"><h1>Reflections</h1></div>
+    </div>
+    <ul>
+      <li class="article">
+        <div><h3><a href="#">Reflection #1</a></h3></div>
+        <div class="article-content">The assessments didn't go quite as planned. The experiment has started off with some mistakes that are far more interesting than they are damaging.</div>
+      </li>
+    </ul>
+  </div>
 </div>
-<div>
-  <a href="/articles/the-hypotheses">The Hypotheses</a>
-</div>
-<div>
-  <a href="/articles/the-experiment">The Experiment</a>
-</div>
-<div>
-  <a href="/articles/the-practice-routine">The Practice Routine</a>
-</div>
-<div>
-  <a href="/articles/other-isomorphic-keyboards">Other Isomorphic Keyboards</a>
-</div>
-
-<h2>Reflections</h2>
-
-<%= javascript_include_tag "test.es6", {extname: false} %>
-<script src="/javascripts/test.js"></script>
