--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,86 @@
 title: The Linear Isomorphic Keybaord
 ---
 
+<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css" />
+<script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+
 <div class="hero">
   <h1 class="hero__text">The Linear Isomorphic Keyboard</h1>
 </div>
+
+<div class="grid-container">
+  <div class="grid-x grid-padding-x section">
+    <div class="cell large-2"></div>
+    <div class="cell large-8 main-description">Is there a better way to design the keyboard?
+      <br/>
+      <br/>
+      This is an experiment to determine if the <strong>Linear Isomorphic Keyboard</strong> is the answer.
+      <div class=""></div>
+    </div>
+    <div class="cell large-2"></div>
+  </div>
+
+  <hr class="hr-top"/><hr class="hr-bottom projects-border"/>
+  
+  <div class="section">
+    <div class="grid-x grid-padding-x">
+      <div class="cell large-12"><h1>Articles</h1></div>
+    </div>
+    <ul>
+      <li class="article">
+        <div><h3><a href="/articles/the-idea">The Idea</a></h3></div>
+        <div class="article-content">There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in
+every key. The first key a new pianist will learn to play is the key of
+C major. It is wonderfully simple: just play the white notes. But...</div>
+      </li>
+      <li class="article">
+        <div><h3><a href="/articles/the-hypotheses">The Hypotheses</a></h3></div>
+        <div class="article-content">I think that the linear isomorphic keyboard (LIK) will outperform the
+traditional keyboard (TK). I predict that I will improve faster on the
+LIK than on the traditional keyboard and that the LIK will not have
+significant technical limitations in comparison to the traditional
+keyboard. More specifically...</div>
+      </li>
+      <li class="article">
+        <div><h3><a href="/articles/the-experiment">The Experiment</a></h3></div>
+        <div class="article-content">I am conducting an experiment to determine whether or not the Linear
+Isomorphic Keyboard is easier to play than the traditional piano
+keyboard. In order to compare the Linear Isomorphic Keyboard (LIK) and the
+traditional keyboard (TK), I am going to practice... </div>
+      </li>
+    </ul>
+    <div class="section__footer">
+      <a href="/articles">More Articles...</a>
+    </div>
+  </div>
+
+  <hr class="hr-top"/><hr class="hr-bottom projects-border"/>
+
+
+  <div class="section">
+    <div class="grid-x grid-padding-x">
+      <div class="cell large-12"><h1>Progress</h1></div>
+    </div>
+
+    <div class="grid-x grid-padding-x keyboard-progress">
+      <div class="cell large-2"></div>
+      <div class="cell large-8 ct-chart ct-octave" style="border: 1px solid #848484;">
+      </div>
+      <div class="cell large-2"></div>
+    </div>
+
+    <div class="section__footer">
+      <a href="/progress">More Progress Coming Soon</a>
+    </div>
+  </div>
+</div>
+
+<footer class="footer">
+  <h4 class="footer__contact">Contact: linearisomorphickeyboard@gmail.com</h4>
+</footer>
+
+<script>
+  // var data = <%# progress_data.to_json %>
+  // new Chartist.Line('.ct-chart', data);
+</script>
+
