--- a/source/stylesheets/foundation.css
+++ b/source/stylesheets/foundation.css
@@ -444,7 +444,10 @@ body {
   margin: 0;
   padding: 0;
   background: #fefefe;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  /* CHANGED */
+  /*font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;*/
+  font-family: 'Libre Baskerville', serif;
+  font-family: ;
   font-weight: normal;
   line-height: 1.5;
   color: #0a0a0a;
@@ -553,7 +556,8 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  /*font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;*/
+  font-family: 'Libre Baskerville', serif;
   font-style: normal;
   font-weight: normal;
   color: inherit;
