Add photo to header.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,6 +6,10 @@ title: The Linear Isomorphic Keybaord
 <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
 <div class="hero">
+  <div class="hero__space"></div>
+  <div class="hero__image">
+      <%= image_tag "LIK-solo.png" %>
+  </div>
   <h1 class="hero__text">The Linear Isomorphic Keyboard</h1>
 </div>
 
