--- a/source/stylesheets/index.css.scss
+++ b/source/stylesheets/index.css.scss
@@ -1,15 +1,33 @@
 .hero {
   width: 100%;
-  height: 608px;
   background-color: #848484;
   position: relative;
 }
-
+.hero__space {
+  height: 8rem;
+}
+.hero__image {
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  // height: 20rem;
+  margin: 0 8rem;
+}
+// .hero__image--inner {
+//   display: inline-block;
+//   position: relative;
+//   right: -50%;
+// }
+// .hero__image {
+//   position: relative;
+//   left: -50%;
+// }
 .hero__text {
-  position: absolute;
-  bottom: 3rem;
-  text-align: center;
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 8rem;
+  margin-top: 2rem;
 }
 
 .main-description {
