--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -33,7 +33,17 @@ body {
   align-items: center;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  // background-color: rgb(0, 0, 0);
+  overflow: hidden;
+
+  // box-shadow: 0 0 .125em 0 rgba(0,0,0,.5);
+  &::after {
+    background: rgba(white,.6);
+    position: absolute;
+    display: block;
+    content: '';
+    top: 0; right: 0; bottom: 0; left: 0;
+    z-index: 3;
+  }
 }
 
 .navbar__logo {
@@ -47,6 +57,7 @@ body {
   height: 3rem;
   line-height: inherit;
   white-space: nowrap;
+  z-index: 5;
 }
 
 .navbar__nav {
@@ -55,6 +66,7 @@ body {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  z-index: 5;
 }
 
 ul {
