--- a/source/stylesheets/index.css.scss
+++ b/source/stylesheets/index.css.scss
@@ -2,6 +2,7 @@
   width: 100%;
   background-color: #848484;
   position: relative;
+  // z-index: 5;
 }
 .hero__space {
   height: 8rem;
@@ -10,7 +11,6 @@
   margin: 0 auto;
   overflow: hidden;
   position: relative;
-  // height: 20rem;
   margin: 0 8rem;
 }
 // .hero__image--inner {
