Limit lines with css and manually.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -43,15 +43,14 @@ C major. It is wonderfully simple: just play the white notes. But...</div>
         <div class="article-content">I think that the linear isomorphic keyboard (LIK) will outperform the
 traditional keyboard (TK). I predict that I will improve faster on the
 LIK than on the traditional keyboard and that the LIK will not have
-significant technical limitations in comparison to the traditional
-keyboard. More specifically...</div>
+significant technical limitations...</div>
       </li>
       <li class="article">
         <div><h3><a href="/articles/the-experiment">The Experiment</a></h3></div>
         <div class="article-content">I am conducting an experiment to determine whether or not the Linear
 Isomorphic Keyboard is easier to play than the traditional piano
 keyboard. In order to compare the Linear Isomorphic Keyboard (LIK) and the
-traditional keyboard (TK), I am going to practice... </div>
+traditional keyboard (TK)... </div>
       </li>
     </ul>
     <div class="section__footer">
