--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -34,16 +34,6 @@ body {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   overflow: hidden;
-
-  // box-shadow: 0 0 .125em 0 rgba(0,0,0,.5);
-  // &::after {
-  //   background: rgba(white,.6);
-  //   position: absolute;
-  //   display: block;
-  //   content: '';
-  //   top: 0; right: 0; bottom: 0; left: 0;
-  //   z-index: 4;
-  // }
 }
 
 .navbar--translucent {
@@ -103,5 +93,49 @@ a:hover {
 
 .recording-link {
   text-decoration: underline;
+}
+
+
+// http://hackingui.com/front-end/a-pure-css-solution-for-multiline-text-truncation/
+/* styles for '...' */ 
+.two-line-clamp {
+  /* hide text if it more than N lines  */
+  overflow: hidden;
+  /* for set '...' in absolute position */
+  position: relative; 
+  /* use this value to count block height */
+  line-height: 1.6em;
+  /* max-height = line-height (1.2) * lines max number (3) */
+  max-height: 3.2em; 
+  /* fix problem when last visible word doesn't adjoin right side  */
+  text-align: justify;  
+  /* place for '...' */
+  margin-right: -1em;
+  padding-right: 1em;
+}
+/* create the ... */
+.two-line-clamp:before {
+  /* points in the end */
+  content: '...';
+  /* absolute position */
+  position: absolute;
+  /* set position to right bottom corner of block */
+  right: 0;
+  bottom: 0;
+}
+/* hide ... if we have text, which is less than or equal to max lines */
+.two-line-clamp:after {
+  /* points in the end */
+  content: '';
+  /* absolute position */
+  position: absolute;
+  /* set position to right bottom corner of text */
+  right: 0;
+  /* set width and height */
+  width: 1em;
+  height: 1em;
+  margin-top: 0.2em;
+  /* bg color = bg color under block */
+  background: white;
 }
 
