--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -33,7 +33,7 @@
       </ul>
     </nav>
 
-    <div class="section--top grid-container">
+    <div class="grid-container">
       <div class="grid-x grid-padding-x">
         <div class="cell large-8">
           <%= yield %>
