--- a/source/progress/index.html.erb
+++ b/source/progress/index.html.erb
@@ -19,46 +19,10 @@
 
 <script>
   var data = <%= progress_data.to_json %>
+  data.plugins = [
+    Chartist.plugins.legend({
+      legendNames: ['TK', 'LIK'],
+    })
+  ];
   new Chartist.Line('.ct-chart', data);
-</script>
-
-<script>
-  // var data = {
-  //   // A labels array that can contain any sort of values
-  //   labels: ['Mon'],
-  //   // Our series array that contains series objects or in this case series data arrays
-  //   series: [
-  //     [59],
-  //     [0]
-  //   ]
-  // };
-
-  // Create a new line chart object where as first parameter we pass in a selector
-  // that is resolving to our chart container element. The Second parameter
-  // is the actual data object.
-  // new Chartist.Line('.ct-chart', data);
-
-
-
-  // var data2 = {
-  //   labels: ['TK', 'LIK'],
-  //   series: [59, 0]
-  // };
-
-  // var options = {
-  //   distributeSeries: true
-  // };
-
-  // var responsiveOptions = [
-  //   ['screen and (max-width: 640px)', {
-  //     seriesBarDistance: 5,
-  //     axisX: {
-  //       labelInterpolationFnc: function (value) {
-  //         return value[0];
-  //       }
-  //     }
-  //   }]
-  // ];
-
-  // new Chartist.Bar('.ct-chart-2', data2, options);
 </script>
