Remove contact from header.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,6 +3,7 @@ title: The Linear Isomorphic Keybaord
 ---
 
 <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css" /> -->
+<!-- We should include this locally -->
 <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 <script src="/javascripts/vendor/chartist-plugin-axistitle.min.js"></script>
 <script src="/javascripts/vendor/chartist-plugin-axistitle.min.js"></script>
