--- a/source/articles/index.html.erb
+++ b/source/articles/index.html.erb
@@ -6,7 +6,7 @@
     <ul>
       <li class="article">
         <a href="/articles/the-idea">
-          <div><h3>The Idea</h3></div>
+          <div><h3>The Idea <span class="draft-tag"> - Draft</span></h3></div>
           <div class="article-content two-line-clamp">There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in
   every key. The first key a new pianist will learn to play is the key of
   C major. It is wonderfully simple: just play the white notes. But...</div>
@@ -14,7 +14,7 @@
       </li>
       <li class="article">
         <a href="/articles/the-hypotheses">
-          <div><h3>The Hypotheses</h3></div>
+          <div><h3>The Hypotheses <span class="draft-tag"> - Draft</span></h3></div>
           <div class="article-content two-line-clamp">I think that the linear isomorphic keyboard (LIK) will outperform the
   traditional keyboard (TK). I predict that I will improve faster on the
   LIK than on the traditional keyboard and that the LIK will not have
@@ -24,7 +24,7 @@
       </li>
       <li class="article">
         <a href="/articles/the-experiment">
-          <div><h3>The Experiment</h3></div>
+          <div><h3>The Experiment <span class="draft-tag"> - Draft</span></h3></div>
           <div class="article-content two-line-clamp">I am conducting an experiment to determine whether or not the Linear
   Isomorphic Keyboard is easier to play than the traditional piano
   keyboard. In order to compare the Linear Isomorphic Keyboard (LIK) and the
@@ -33,7 +33,7 @@
       </li>
       <li class="article">
         <a href="/articles/the-practice-routine">
-          <div><h3>The Practice Routine</h3></div>
+          <div><h3>The Practice Routine <span class="draft-tag"> - Draft</span></h3></div>
           <div class="article-content two-line-clamp">I had a few things in mind when developing the curriculum for the
   keyboards to practice. Most importantly, I want to address the three
   main domains of musical prowess, the technical aspect of being able to
@@ -43,7 +43,7 @@
       </li>
       <li class="article">
         <a href="/articles/other-isomorphic-keyboards">
-          <div><h3>Other Isomorphic Keyboards</h3></div>
+          <div><h3>Other Isomorphic Keyboards <span class="draft-tag"> - Draft</span></h3></div>
           <div class="article-content two-line-clamp">One of the cardinal sins of productivity is to do what has already been
   done. But in my quest to test an isomorphic keyboard against the
   traditional keyboard, I appear to have sinned. Isomorphic keyboards have existed since the the early nineteenth century
@@ -61,7 +61,7 @@
     <ul>
       <li class="article">
         <a href="#">
-          <div><h3>Reflection #1</h3></div>
+          <div><h3>Assessment Reflection <span class="draft-tag"> - Draft</span></h3></div>
           <div class="article-content two-line-clamp">The assessments didn't go quite as planned. The experiment has started off with some mistakes that are far more interesting than they are damaging.</div>
         </a>
       </li>
